Fixing up breaking tests